--- a/bringup/config/diffbot_controllers.yaml
+++ b/bringup/config/diffbot_controllers.yaml
@@ -10,8 +10,10 @@ controller_manager:
 
 diffbot_base_controller:
   ros__parameters:
-    left_wheel_names: ["left_wheel_joint"]
-    right_wheel_names: ["right_wheel_joint"]
+    front_left_wheel_name: ["drivewh2_l"]
+    front_right_wheel_names: ["drivewh2_r"]
+    back_left_wheel_name: ["drivewh1_l"]
+    back_right_wheel_names: ["drivewh1_r"]
 
     wheel_separation: 0.10
     #wheels_per_side: 1  # actually 2, but both are controlled by 1 signal
